css/custom.css
/* BODY */
body {
  margin: 0;
}

* {
  box-sizing: border-box;
}

/* MAIN */
main {
  /* make sure to cover the screen */
  min-height: 100vh;
  /* need a solid bg to hide the footer */
  background: white;
  /* put on top */
  position: relative;
  z-index: 1;
  padding: 2rem;
}

/* TEXT */
p {
  margin: 0 auto 1rem;
}

/* BOOTSTRAP */
.card-deck {padding: 10vw 10vw 0vw 10vw}

.btn{
  color: #fff;
  background-color: #3431D6;
  border-color: #3431D6;
}

.btn:hover{
  color: #fff;
  background-color: #6562fc;
  border-color: #6562fc;
}

.btn:focus{
  color: #fff;
  background-color: #6562fc;
  border-color: #6562fc;
}


/* !!! CUSTOM CSS !!! */

/* ALL PAGES */
.logotype{
  margin: 0 0 2vh 0;
}

.logotype-img{
  width: 100%
}

.img-container {
  width: 100%;
  height: 100%;
}

.page-header{

}

.main-nav{
/* adds space below nav */
  margin-bottom: 3rem;
}

.col-nav-links{
/* makes nav flex column with even spacing */
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.main-nav-link{
/* selects a tags in nav */
}



.link-to-project-page{
  /* display: contents; */
}

.link-to-project-page:hover{

}

/* INDEX page */
.index-img{
    width: 100%;
    height: 100%;
    margin: 0 0 0 0;
  }

.index-text-container{

}

.index-link{
  font-size: 2rem;
  color: redrgb(13, 172, 231);
  font-family: inherit;
}
.col-index-text{

}



/* ALL PROJECT page */
.all-project-img-container{

}

.all-project-img{
  height: 100%;
  width: 100%;
  /* border: 5px solid rgb(9, 14, 20); */

}
.col-all-project-text{
/* selects bootstrap col */
  display: flex;
  flex-direction: column;
  justify-content: start;
}

.all-project-text-container{
/* selects project discriptions/text */
}

.all-projects-btn{

}

/* PROJECT page */
.project-container{
  margin-top: 5vh;
  margin-bottom: 15vh;

}
.project-hero-container {
  width: 100%;
  height: 500px;
  margin: 0 0 20vh 0;
}

.project-img-container{
  width: 100%;
  height: 100%;
  margin: 0 0 0 0;
}
.project-img {
  width: 100%;
  height: 100%;
  margin: 0 0 0 0;
}

.project-hero-text {
  width: 100%;
  height: 20vh;
  margin: 0 0 0 0;
}

.project-content {
  width: 100%;
  height: 25vh;
  margin-bottom: 5vh;
}


/* FOOTER */

footer {
  /* put on bottom */
  position: sticky;
  bottom: 0;
  left: 0;
  /* colors the darn thing */
  color: white;
  background: radial-gradient(circle at 9.44% -7.92%, #00b9e2 0, #00b9f8 3.33%, #00b8ff 6.67%, #00b6ff 10%, #00b4ff 13.33%, #00b1ff 16.67%, #00adff 20%, #00a8ff 23.33%, #00a1ff 26.67%, #0099ff 30%, #0090ff 33.33%, #4c85ff 36.67%, #8f78ff 40%, #b86aff 43.33%, #d859ff 46.67%, #f146f9 50%, #ff2ee4 53.33%, #ff00cd 56.67%, #ff00b5 60%, #ff009e 63.33%, #ff0086 66.67%, #ff006f 70%, #ff0058 73.33%, #ff2041 76.67%, #ff3b28 80%, #ff4f00 83.33%, #ff5f00 86.67%, #f36d00 90%, #e37a00 93.33%, #d18500 96.67%, #be8e00 100%);
  /* pads the thing */
  padding: 5vh;
}

/* selects footer icons */
.fab, .far{
  color: white;
}

/* selects :hover footer icons */
.fab:hover, .far:hover{
  opacity: 50%;
  color: white;
  text-decoration: none;
}

.icon-container{
  text-align: center;
}

.footer-p{
  cursor: default;
}


/* ~~~~ TEST CODE ~~~~ */

.module-border-wrap{
  padding: .5rem;
}
.module-border-wrap:hover,.module-border-wrap:focus{
  padding: .5rem;
  position: relative;
  /* changes cursor */
  cursor: pointer;
  background: radial-gradient(circle at 9.44% -7.92%, #00b9e2 0, #00b9f8 3.33%, #00b8ff 6.67%, #00b6ff 10%, #00b4ff 13.33%, #00b1ff 16.67%, #00adff 20%, #00a8ff 23.33%, #00a1ff 26.67%, #0099ff 30%, #0090ff 33.33%, #4c85ff 36.67%, #8f78ff 40%, #b86aff 43.33%, #d859ff 46.67%, #f146f9 50%, #ff2ee4 53.33%, #ff00cd 56.67%, #ff00b5 60%, #ff009e 63.33%, #ff0086 66.67%, #ff006f 70%, #ff0058 73.33%, #ff2041 76.67%, #ff3b28 80%, #ff4f00 83.33%, #ff5f00 86.67%, #f36d00 90%, #e37a00 93.33%, #d18500 96.67%, #be8e00 100%);
}

.module {
  background: #ffffff;
  padding: .5rem;
}

